--- a/TRNSLT-212/it/index.html
+++ b/TRNSLT-212/it/index.html
@@ -459,7 +459,7 @@
                     <div class="row">
                         <div class="col xl12 l12 m12 s12">
                             <div class="howToUse valign-wrapper">
-                                <div class="obj objBox3 img_box"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/women.png" src="img/women.png"></div>
+                                <div class="obj objBox3 img_box"><img alt class="lazy" src="img/women.png"></div>
                                 <div class="howToUse-content">
                                     <div class="howToUse-title"> Modalità di assunzione:</div>
                                     <div class="howToUse-text"> Assumere 30 gocce con un bicchiere d'acqua dopo i pasti due volte al giorno. Per la massima efficacia, il corso dura 3 mesi. Le istruzioni dettagliate sono nella confezione.</div>
