--- a/TRNSLT-214/ro/index.html
+++ b/TRNSLT-214/ro/index.html
@@ -158,7 +158,7 @@
             </section>
             <section class="block_02">
                 <div class="container">
-                    <div class="obj objBox1"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/men.png" src="img/men.png"></div>
+                    <div class="obj objBox1"><img alt class="lazy" src="img/men.png"></div>
                     <div class="row m-0">
                         <div class="col xl8 l8 m12 s12">
                             <div class="block_02-title"><span> Încercați-o!</span> Aveți unul dintre următoarele simptome?</div>
@@ -280,7 +280,7 @@
             </section>
             <section class="block_06">
                 <div class="container">
-                    <div class="obj objBox2"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/expert.png" src="img/expert.png"></div>
+                    <div class="obj objBox2"><img alt class="lazy" src="img/expert.png"></div>
                     <div class="row m-0">
                         <div class="col xl8 offset-xl4 l10 offset-l2 m12 s12">
                             <div class="block_06-title"> Opinia experților</div>
@@ -459,7 +459,7 @@
                     <div class="row">
                         <div class="col xl12 l12 m12 s12">
                             <div class="howToUse valign-wrapper">
-                                <div class="obj objBox3 img_box"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/women.png" src="img/women.png"></div>
+                                <div class="obj objBox3 img_box"><img alt class="lazy" src="img/women.png"></div>
                                 <div class="howToUse-content">
                                     <div class="howToUse-title"> Mod de aplicare:</div>
                                     <div class="howToUse-text"> De două ori pe zi cate 30 de picături diluate  într-un pahar de apă, după masa. Pentru o eficiență maximă este recomandat sa urmați un tratament complet de 3 luni. Instrucțiuni detaliate pot fi găsite în pachet.</div>
