--- a/TRNSLT-215/bg/index.html
+++ b/TRNSLT-215/bg/index.html
@@ -459,7 +459,7 @@
                     <div class="row">
                         <div class="col xl12 l12 m12 s12">
                             <div class="howToUse valign-wrapper">
-                                <div class="obj objBox3 img_box"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/women.png" src="img/women.png"></div>
+                                <div class="obj objBox3 img_box"><img alt class="lazy" src="img/women.png"></div>
                                 <div class="howToUse-content">
                                     <div class="howToUse-title"> Начин на приложение:</div>
                                     <div class="howToUse-text"> Приемат се по 30 капки 2 пъти дневно след хранене, разтворени в чаша вода. За постигане на максимална ефективност е необходим курс от 3 месеца. В опаковката има подробна инструкция.</div>
