--- a/TRNSLT-215/bg/index.html
+++ b/TRNSLT-215/bg/index.html
@@ -76,7 +76,7 @@
                                     </div>
                                     <div class="headerItem">
                                         <div class="headerItem-icon"><img alt src="img/headerIcon_02.png"></div>
-                                        <div class="headerItem-text"> Днес поръчаха 3 567 души</div>
+                                        <div class="headerItem-text"> Днес поръчаха 1 067 души</div>
                                     </div>
                                 </div>
                                 <div class="headerButton" data-goto=".block_12"> Заявете обратно обаждане</div>
@@ -89,8 +89,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col xl10 offset-xl1 l12 m12 s12">
-                            <div class="block_01-title"> CardioFort ©: нормално кръвно налягане от първия прием. Продължително действие.</div>
-                            <div class="block_01-subtitle"> Той атакува причината за заболяването, като елиминира риска от инсулт и инфаркт.</div>
+                            <div class="block_01-title"> CardioFort ©: нормално кръвно налягане още след първия прием. Продължително действие.</div>
+                            <div class="block_01-subtitle"> Той атакува причините за заболяването, като елиминира риска от инсулт и инфаркт.</div>
                         </div>
                     </div>
                     <div class="row">
@@ -158,7 +158,7 @@
             </section>
             <section class="block_02">
                 <div class="container">
-                    <div class="obj objBox1"><img alt class="lazy"  src="img/men.png"></div>
+                    <div class="obj objBox1"><img alt class="lazy" src="img/men.png"></div>
                     <div class="row m-0">
                         <div class="col xl8 l8 m12 s12">
                             <div class="block_02-title"><span> Опитайте сами!</span> Имате ли поне един от следните симптоми?</div>
@@ -265,7 +265,7 @@
                                 </div>
                                 <div class="causesBox-item">
                                     <div class="causesBox-icon img_box"><img alt src="img/cause_04.png"></div>
-                                    <div class="causesBox-title"> Намалени нива на кръвната захар</div>
+                                    <div class="causesBox-title"> Висока кръвна захар</div>
                                     <div class="causesBox-text"> CardioFort понижава нивата на кръвната захар, като предотвратява развитието на диабет, благодарение на екстрактите от риган и хвощ.</div>
                                 </div>
                                 <div class="causesBox-item">
@@ -287,7 +287,7 @@
                             <div class="block_06-text"> Потвърждавам!</div>
                             <div class="block_06-text"> Основното средство за борба с хипертонията са биофлавоноидите. Те могат да бъдат получени само от зелен чай и глог и присъстват в почти всички средства за лечение на хипертония.</div>
                             <div class="block_06-text"> Но концентрацията им в повечето продукти е незначителна!</div>
-                            <div class="block_06-text"> Така че може да се наложи ефектът да се чака в продължение на години. Със сигурност знам, че единственото средство с изобилие на биофлавоноиди е Кардиофорт. Запознах се с неговата формула и с констатациите на независими експерти и заслужили учени. Препоръчвам тази добавка на пациентите си и им се карам, ако започнат да се самолекуват и да приемат това, което "приятел ги е посъветвал", "прочели са в интернет" или "чули по телевизията".</div>
+                            <div class="block_06-text"> Така че може да се наложи ефектът да се чака в продължение на години. Със сигурност знам, че единственото средство с изобилие на биофлавоноиди е Кардиофорт. Запознах се с неговата формула и с констатациите на независими експерти и изтъкнати учени. Препоръчвам тази добавка на пациентите си и им се карам, ако започнат да се самолекуват и да приемат това, което "приятел ги е посъветвал", "прочели са в интернет" или "чули по телевизията".</div>
                             <div class="block_06-text"> Това не е правилно! Трябва да се борите с хипертонията само с безопасни методи! Тези, на които се доверяват лекарите, и които ще накарат болестта ви да изчезне завинаги.</div>
                             <div class="expertName"><span> Антон  Михайлов</span> Лекар, доктор на медицинските науки</div>
                         </div>
@@ -326,7 +326,7 @@
                                     <div class="img_box productBox"><img alt src="img/product.png"></div>
                                 </div>
                                 <div class="customForm-item">
-                                    <div class="customForm-title"> Количеството на продукта е ограничено:</div>
+                                    <div class="customForm-title"> Въведете данните във формата по-долу:</div>
                                     <form id="order_form" method="POST">
 		  <input name="offer_id" type="hidden" value="{offer_id}">
           <input name="geo" type="hidden" value>
@@ -459,7 +459,7 @@
                     <div class="row">
                         <div class="col xl12 l12 m12 s12">
                             <div class="howToUse valign-wrapper">
-                                <div class="obj objBox3 img_box"><img alt class="lazy" src="img/women.png"></div>
+                                <div class="obj objBox3 img_box"><img alt class="lazy"  src="img/women.png"></div>
                                 <div class="howToUse-content">
                                     <div class="howToUse-title"> Начин на приложение:</div>
                                     <div class="howToUse-text"> Приемат се по 30 капки 2 пъти дневно след хранене, разтворени в чаша вода. За постигане на максимална ефективност е необходим курс от 3 месеца. В опаковката има подробна инструкция.</div>
