--- a/OFFERS-321/bg-sticky-foil-l1/index.html
+++ b/OFFERS-321/bg-sticky-foil-l1/index.html
@@ -97,7 +97,7 @@
         <!-- /video -->
         <!-- benefits -->
         <section class="benefits_section">
-            <h2 class="title"><span> КЪДЕ МОЖЕ ДА ИЗПОЛЗВАТЕ</span> САМОЗАЛЕПВАЩОТО  ФОЛИО?</h2>
+            <h2 class="title"><span> ОСНОВНЫЕ </span> ПРЕИМУЩЕСТВА</h2>
             <!-- benefits 2 -->
             <div class="benefits_list2">
                 <div class="benefit_item">
@@ -117,18 +117,11 @@
                     <img src="img/benefits2__benefit4_image.jpg" alt>
                     <p> За предпазване на мебелите от прах и пара</p>
                 </div>
-                <div class="benefit_item">
-                    <img src="img/benefits2__benefit5_image.jpg" alt>
-                    <p> За защита на стените от влага и мухъл</p>
-                </div>
-                <div class="benefit_item">
-                    <img src="img/benefits2__benefit6_image.jpg" alt>
-                    <p> За предпазване от пръски около мивката</p>
-                </div>
             </div>
         </section>
         <section class="description_section">
-            <h2 class="title"><span> КАК СА ЗАЩИТЕНИ</span> <br>ВАШИТЕ МЕБЕЛИ?</h2>
+            <h2 class="title"><span> САМЫЙ ЛЕГКИЙ РЕМОНТ</span> <br>В ВАШЕЙ ЖИЗНИ!
+            </h2>
             <p class="description_text"><b> Уникалното самозалепващо се фолио е изработено от първокласен алуминий, който не гори, издържа на механични повреди, не пропуска вода и не задържа  прах.</b> 
 			<br>С помощта на това фолио можете да защитите всяка повърхност - вертикална или хоризонтална.</p>
             <img class="image" src="img/gif.gif" alt>
@@ -136,7 +129,7 @@
             <p> Самозалепващото фолио има интересна перфорация и благороден външен вид, за това идеално се вписва  в съвременния модерен дизайн. Има същия великолепен "цвят металик" като и съвременните домакински уреди.</p>
             <!-- benefits 2 -->
 			
-            <h2 class="title"><span> ДОПЪЛНИТЕЛНИ </span> ПРЕДИМСТВА</h2>
+            <h2 class="title"><span> Дополнительные</span> преимущества</h2>
             <div class="benefits_list2">
                 <div class="benefit_item">
                     <img src="img/b1.jpg" alt>
@@ -164,7 +157,7 @@
         </section>
         <!-- /description -->
         <section class="benefits_section dark_theme padd">
-            <h2 class="title"><span> ЛЕСНО <br>ИНСТАЛИРАНЕ НА</span> САМОЗАЛЕПВАЩОТО ФОЛИО
+            <h2 class="title"> <span> КАК НАКЛЕИТЬ <br> 3D ПАНЕЛИ НА СТЕНУ? </span> 
 </h2>
             <!-- benefits 3 -->
             <div class="benefits_list3 va_middle">
