--- a/OFFERS-321/ru/index.html
+++ b/OFFERS-321/ru/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="benefit_item">
                     <img src="img/offer3__benefit2_image.jpg" alt>
-                    <p> В наборе 3 панели<br><b> 3 панели</b> размером<br> 30см на 30см</p>
+                    <p> В наборе 3 панели<br> размером<br> 30см на 30см</p>
                 </div>
                 <div class="benefit_item">
                     <img src="img/offer3__benefit3_image.jpg" alt>
@@ -113,7 +113,7 @@
             <h2 class="title"><span> САМЫЙ ЛЕГКИЙ РЕМОНТ</span> <br> В ВАШЕЙ ЖИЗНИ! </h2>
             <p class="description_text"><b> Самоклеющиеся панели – это простой способ обновить интерьер.</b> 
 			<br> Благодаря реалистичной имитации фактуры и рисунка, удается создать действительно красивый и современный дизайн. Изготовлены из экологических материалов гипоаллергенны, не выделяют вредных веществ, поэтому идеально подходит для любых помещений, даже детских и спальных комнат.</p>
-            <img class="image" src="img/gif.gif" alt>
+            <img class="image" src="img/gif.jpg" alt>
 			<br>
             <p> 3D панель – это отличная замена кафеля, обоев, обычного листового пластика, так как не ворует пространство и не требуют практически никаких подготовительных работ, по типу каркаса из профилей или замешивания сухих смесей.</p>
             <!-- benefits 2 -->
@@ -265,7 +265,7 @@
                 </div>
                 <div class="benefit_item">
                     <img src="img/offer3__benefit2_image.jpg" alt>
-                    <p> В наборе 3 панели<br><b> 3 панели</b> размером<br> 30см на 30см</p>
+                    <p> В наборе 3 панели<br> размером<br> 30см на 30см</p>
                 </div>
                 <div class="benefit_item">
                     <img src="img/offer3__benefit3_image.jpg" alt>
