--- a/OFFERS-336/es/index.html
+++ b/OFFERS-336/es/index.html
@@ -65,9 +65,48 @@
         <div class="product_info">
             <h2 class="title" id="product-info"> CARACTERÍSTICAS</h2>
             <div class="m-img">
-                <img src="images/14.jpg" alt></p>
+                <p><img src="images/2.gif" alt></p>
                 <br>
-                <p><img src="images/7.gif" alt></p>
+                <p> <img src="images/3.jpg" alt></p>
+                <br>
+                <p> <img src="images/4.jpg" alt></p>
+                <br>
+                <p> <img src="images/5.jpg" alt></p>
+                <br>
+                <p> <img src="images/6.jpg" alt></p>
+                <br>
+                <p> <img src="images/7.gif" alt></p>
+                <br>
+                <p> <img src="images/8.jpg" alt></p>
+                <br>
+                <p> <img src="images/9.gif" alt></p>
+                <br>
+                <p> <img src="images/10.jpg" alt></p>
+                <br>
+                <p> <img src="images/11.jpg" alt></p>
+                <br>
+                <p> <img src="images/12.gif" alt></p>
+                <br>
+                <p> <img src="images/13.jpg" alt></p>
+                <br>
+                <p> <img src="images/14.jpg" alt></p>
+                <br>
+                <p> <img src="images/15.jpg" alt></p>
+                <br>
+                <p> <img src="images/16.jpg" alt></p>
+                <br>
+                <p> <img src="images/17.jpg" alt></p>
+                <br>
+                <p> <img src="images/18.jpg" alt></p>
+                <br>
+                <p> <img src="images/19.jpg" alt></p>
+                <br>
+                <p> <img src="images/20.jpg" alt></p>
+                <br>
+                <p> <img src="images/21.jpg" alt></p>
+                <br>
+                <p> <img src="images/22.jpg" alt></p>
+                <br>
             </div>
         </div>
     </section>
