--- a/OFFERS-336/es/index.html
+++ b/OFFERS-336/es/index.html
@@ -10,7 +10,7 @@
     <meta content="320" name="MobileOptimized">
     <meta content="telephone=no" name="format-detection">
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
-    <title>Prod</title>
+    <title>Alpha Shorts</title>
 <meta property="og:title" content=""/>
 <meta property="og:description" content="-50%"/>
 <meta property="og:image" content=""/>
@@ -112,7 +112,7 @@
     </section>
 
     <section id="page-order" class="page-order">
-        <h2 class="title" id="product-info"> (50% de descuento) Prod</h2>
+        <h2 class="title" id="product-info"> (50% de descuento) Alpha Shorts</h2>
         <form id="form" name="form" method="post">
 
 
