--- a/TRNSLT-203/gr/index.html
+++ b/TRNSLT-203/gr/index.html
@@ -89,7 +89,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col xl10 offset-xl1 l12 m12 s12">
-                            <div class="block_01-title"> CardioFort ©: βοηθάει στη φυσιολογική αρτηριακή πίεση από την πρώτη δόση. Μακροπρόθεσμη δράση.</div>
+                            <div class="block_01-title"> CardioFort ©: βοηθά στη φυσιολογική αρτηριακή πίεση από την πρώτη δόση. Μακροπρόθεσμη δράση.</div>
                             <div class="block_01-subtitle"> Επιτίθεται στην αιτία της νόσου, εξαλείφοντας τον κίνδυνο εγκεφαλικού επεισοδίου και καρδιακής προσβολής.</div>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
           <input name="time_zone" type="hidden" value="+3">
           <input name="lang" type="hidden" value="RU">
                                             <div class="input-field"><input id="name" name="name" type="text" required><label for="name"> Εισάγετε το ονοματεπώνυμο σας</label></div>
-                                            <div class="input-field"><input class="only_number" id="phone" name="phone" type="tel" required><label for="phone"> Πληκτρολόγησε τον αριθμό του τηλεφώνου σας</label></div>
+                                            <div class="input-field"><input class="only_number" id="phone" name="phone" type="tel" required><label for="phone"> Πληκτρολογήστε τον αριθμό του τηλεφώνου σας</label></div>
                                             <div class="buttonBox"><button class="waves-effect btn red js_submit button__text customBtn" type="submit"> ΠΑΡΑΓΓΕΛΙΑ</button></div>
                                         </form>
                                     </div>
@@ -158,7 +158,7 @@
             </section>
             <section class="block_02">
                 <div class="container">
-                    <div class="obj objBox1"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/men.png" src="img/men.png"></div>
+                    <div class="obj objBox1"><img alt class="lazy" src="img/men.png"></div>
                     <div class="row m-0">
                         <div class="col xl8 l8 m12 s12">
                             <div class="block_02-title"><span> Δοκιμάστε το μόνοι σας!</span> Έχετε τουλάχιστον ένα από τα ακόλουθα συμπτώματα?</div>
@@ -206,7 +206,7 @@
                             </div>
                             <div class="bannerBox">
                                 <div class="bannerBox-title"> ΑΡΑ ΕΧΕΤΕ ΥΠΕΡΤΑΣΗ!</div>
-                                <div class="bannerBox-text"><span> Σημαντικό!</span> Το 67% των υπερτασικών ασθενών στην Ελλάδα δεν υποψιάζεται ότι είναι άρρωστοι.</div>
+                                <div class="bannerBox-text"><span> Σημαντικό!</span> Το 67% των υπερτασικών ασθενών στην Ελλάδα δεν υποψιάζονται καν ότι νοσούν.</div>
                             </div>
                         </div>
                     </div>
@@ -280,16 +280,16 @@
             </section>
             <section class="block_06">
                 <div class="container">
-                    <div class="obj objBox2"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/expert.png" src="img/expert.png"></div>
+                    <div class="obj objBox2"><img alt class="lazy"  src="img/expert.png"></div>
                     <div class="row m-0">
                         <div class="col xl8 offset-xl4 l10 offset-l2 m12 s12">
                             <div class="block_06-title"> Γνώμη ειδικού</div>
                             <div class="block_06-text"> Σας βεβαιώνω!</div>
                             <div class="block_06-text"> Η κύρια θεραπεία για την υπέρταση είναι τα βιοφλαβονοειδή. Μπορούν να ληφθούν μόνο από πράσινο τσάι και κραταίγου. Είναι παρόντα σε σχεδόν όλα τα φάρμακα για υπέρταση.</div>
                             <div class="block_06-text"> Αλλά! Η συγκέντρωσή τους στα περισσότερα προϊόντα είναι αμελητέα!</div>
-                            <div class="block_06-text"> Έτσι, γι’ αυτό το φαινόμενο μπορεί να πρέπει να περιμένετε αρκετά χρόνια. Ξέρω σίγουρα ότι η μόνη θεραπεία με την μεγαλύτερη ποσότητα των βιοφλαβονοειδών είναι το Cardiofort. Είδα τον τύπο του και τα συμπεράσματα ανεξάρτητων εμπειρογνωμόνων και διακεκριμένων προσώπων. Προτείνω αυτό το συμπλήρωμα στους ασθενείς και τους επιπλήττουν εάν αρχίσουν να αυτοθεραπεύονται και αποδέχονται το ότι «το πρότεινε κάποιος φίλος», «διάβασαν στο Διαδίκτυο», «άκουσαν στην τηλεόραση».</div>
-                            <div class="block_06-text"> Δεν είναι σωστό! Πρέπει να καταπολεμήσετε την υπέρταση μόνο με ασφαλείς μεθόδους! Εμπιστεύονται οι γιατροί που θα κάνουν την ασθένειά σας να εξαφανιστεί για πάντα.</div>
-                            <div class="expertName"><span> Σπύρος Αποστολάκος</span> Γιατρός της υψηλότερης κατηγορίας, γιατρός Ιατρικών Επιστημών</div>
+                            <div class="block_06-text"> Ξέρω σίγουρα ότι η μόνη θεραπεία με την μεγαλύτερη ποσότητα των βιοφλαβονοειδών είναι το Cardiofort. Είδα τον τύπο του και τα συμπεράσματα ανεξάρτητων εμπειρογνωμόνων και διακεκριμένων προσώπων. Προτείνω αυτό το συμπλήρωμα στους ασθενείς και τους κάνω αυστηρές παρατηρήσεις εάν αρχίσουν τις αυτοθεραπείες και με δικαιολογίες του τύπου «το πρότεινε κάποιος φίλος», « το διάβασαν στο Διαδίκτυο», «άκουσαν στην τηλεόραση».</div>
+                            <div class="block_06-text"> Δεν είναι σωστό! Πρέπει να καταπολεμήσετε την υπέρταση μόνο με ασφαλείς μεθόδους! Εμπιστευτείτε τους γιατρούς που θα κάνουν την ασθένειά σας να εξαφανιστεί για πάντα.</div>
+                            <div class="expertName"><span> Σπύρος Αποστολάκος</span> Διδάκτωρ Ιατρικών Επιστημών</div>
                         </div>
                     </div>
                 </div>
@@ -300,7 +300,7 @@
                         <div class="col xl10 offset-xl1 l12 m6 offset-m4 s12">
                             <div class="dflex customForm">
                                 <div class="customForm-item">
-                                    <div class="saleBox"> Προσφορά<span> -πενήντα%</span></div>
+                                    <div class="saleBox"> Προσφορά<span> -50%</span></div>
                                     <div class="dflex customForm-header">
                                         <div class="formBox-header__text"> Η ποσότητα του προϊόντος είναι περιορισμένη:</div>
                                         <div class="valign-wrapper formBox-header__count">
@@ -335,7 +335,7 @@
           <input name="time_zone" type="hidden" value="+3">
           <input name="lang" type="hidden" value="RU">
                                         <div class="input-field"><input id="name" name="name" type="text" required><label for="name"> Εισάγετε το ονοματεπώνυμο σας</label></div>
-                                        <div class="input-field"><input class="only_number" id="phone" name="phone" type="tel" required><label for="phone"> Πληκτρολόγησε τον αριθμό του τηλεφώνου σας</label></div>
+                                        <div class="input-field"><input class="only_number" id="phone" name="phone" type="tel" required><label for="phone"> Πληκτρολογήστε τον αριθμό του τηλεφώνου σας</label></div>
                                         <div class="buttonBox"><button class="waves-effect btn red js_submit button__text customBtn" type="submit"> ΠΑΡΑΓΓΕΛΙΑ</button></div>
                                     </form>
                                 </div>
@@ -405,7 +405,7 @@
                             <div class="reviewsBox">
                                 <div class="dflex reviewItem">
                                     <div class="reviewItem-avatar img_box"><img alt src="img/review_01.jpg"></div>
-                                    <div class="reviewItem-text"> Συνειδητοποίησα ότι η μείωση της αρτηριακής πίεσης προκαλεί ισχαιμικό εγκεφαλικό επεισόδιο, εγκεφαλικό έμφραγμα - βλέποντας ότι αυτό συμβαίνει στην μεγαλύτερη αδερφή μου. Οι γιατροί έσωσαν τη ζωή της, αλλά ποτέ δεν αναρρώθηκε από την ασθένειά της. Όταν γνώρισα για πρώτη φορά αυτήν την ασθένεια, το ήξερα ήδη Αλά, μερικά κόλπα και ήξερα ότι έπρεπε να αναζητήσω βότανα και βότανα. Το CardioFort συνταγογραφήθηκε από γιατρό, μια πολύ σοφή γυναίκα. Είμαι πολύ ευγνώμων σε αυτήν. Έχουν περάσει 4 χρόνια και δεν υποφέρω πλέον υπέρταση. Είμαι απόλυτα υγιές άτομο, δεν φοβάμαι καρδιακή προσβολή ή εγκεφαλικό επεισόδιο. Προσέξτε την υγεία σας!<span class="authorName"> Άννα, 39 ετών, Καλαμάτα</span>
+                                    <div class="reviewItem-text"> Έμαθα ότι η μείωση της αρτηριακής πίεσης προκαλεί ισχαιμικό εγκεφαλικό επεισόδιο, εγκεφαλικό έμφραγμα - αυτό το έπαθε η μεγαλύτερη αδερφή μου. Οι γιατροί έσωσαν τη ζωή της, αλλά δεν ανάρρωσε πλήρες ποτέ. Όταν αντιμετώπισα η ιδια για πρώτη φορά αυτή την ασθένεια, ήξερα ήδη κάποια κόλπα και ήξερα ότι έπρεπε να αναζητήσω φυτικά φάρμακα. Το CardioFort συνταγογραφήθηκε από την γιατρό μου, μια πολύ σοφή γυναίκα. Είμαι πολύ ευγνώμων. Έχουν περάσει 4 χρόνια και δεν υποφέρω πλέον απο υπέρταση. Είμαι ένας απόλυτα υγιές άνθρωπος, δεν φοβάμαι καρδιακή προσβολή ή εγκεφαλικό επεισόδιο. Προσέξτε την υγεία σας!<span class="authorName"> Άννα, 39 ετών, Καλαμάτα</span>
                                     </div>
                                 </div>
                                 <div class="dflex reviewItem">
@@ -446,8 +446,8 @@
                                 </div>
                                 <div class="bonusItem center-align">
                                     <div class="bonusItem-icon img_box"><img alt src="img/bonus_04.png"></div>
-                                    <div class="bonusItem-title"> Αποτελεσματικό αποτέλεσμα χωρίς παρενέργειες.</div>
-                                    <div class="bonusItem-text"> Τα ζωντανά φυτικά κύτταρα αντιστοιχούν πλήρως στα κύτταρα του ανθρώπινου σώματος</div>
+                                    <div class="bonusItem-title"> Αποτελέσματα χωρίς παρενέργειες.</div>
+                                    <div class="bonusItem-text"> Τα ζωντανά φυτικά κύτταρα ανταποκρίνονται πλήρως στα κύτταρα του ανθρώπινου σώματος</div>
                                 </div>
                             </div>
                         </div>
@@ -459,10 +459,10 @@
                     <div class="row">
                         <div class="col xl12 l12 m12 s12">
                             <div class="howToUse valign-wrapper">
-                                <div class="obj objBox3 img_box"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/women.png" src="img/women.png"></div>
+                                <div class="obj objBox3 img_box"><img alt class="lazy" src="img/women.png"></div>
                                 <div class="howToUse-content">
                                     <div class="howToUse-title"> Τρόπος εφαρμογής:</div>
-                                    <div class="howToUse-text"> Πάρτε 2 κάψουλες μετά το γεύμα. Για μέγιστη αποτελεσματικότητα, πρέπει να ολοκληρώσετε την θεραπεία εντός 3 μηνών. Λεπτομερείς οδηγίες υπάρχουν στη συσκευασία.</div>
+                                    <div class="howToUse-text"> Πάρτε 2 κάψουλες μετά το γεύμα. Για μέγιστη αποτελεσματικότητα, πρέπει να ακολουθήσετε την θεραπεία εντός 3 μηνών. Λεπτομερείς οδηγίες υπάρχουν στη συσκευασία.</div>
                                 </div>
                             </div>
                         </div>
@@ -475,7 +475,7 @@
                         <div class="col xl10 offset-xl1 l12 m7 offset-m4 s12">
                             <div class="dflex customForm">
                                 <div class="customForm-item">
-                                    <div class="saleBox"> Προσφορά<span> -πενήντα%</span></div>
+                                    <div class="saleBox"> Προσφορά<span> -50%</span></div>
                                     <div class="dflex customForm-header">
                                         <div class="formBox-header__text"> Η ποσότητα του προϊόντος είναι περιορισμένη:</div>
                                         <div class="valign-wrapper formBox-header__count">
@@ -510,7 +510,7 @@
           <input name="time_zone" type="hidden" value="+3">
           <input name="lang" type="hidden" value="RU">
                                         <div class="input-field"><input id="name" name="name" type="text" required><label for="name"> Εισάγετε το ονοματεπώνυμο σας</label></div>
-                                        <div class="input-field"><input class="only_number" id="phone" name="phone" type="tel" required><label for="phone"> Πληκτρολόγησε τον αριθμό του τηλεφώνου σας</label></div>
+                                        <div class="input-field"><input class="only_number" id="phone" name="phone" type="tel" required><label for="phone"> Πληκτρολογήστε τον αριθμό του τηλεφώνου σας</label></div>
                                         <div class="buttonBox"><button class="waves-effect btn red js_submit button__text customBtn" type="submit"> ΠΑΡΑΓΓΕΛΙΑ</button></div>
                                     </form>
                                 </div>
