--- a/TRNSLT-185/gr/index.html
+++ b/TRNSLT-185/gr/index.html
@@ -507,7 +507,7 @@
                         <div class="item">
                            <div class="info">
                               <div class="coment_ava"><img src="images/5.png"></div>
-                              <span class="name"> Πέτρος Κωστόπουλος (συντάκτης)<span style="color:red;"> (συντάκτης)</span> <span class="date" style="display: inline;"><script type="text/javascript">
+                              <span class="name"> Πέτρος Κωστόπουλος<span style="color:red;"> (συντάκτης)</span> <span class="date" style="display: inline;"><script type="text/javascript">
     var now = Date.now(),
     day = 1000 * 60 * 60 * 24;
     document.write(new Date(now - day * 3).toLocaleDateString());
