--- a/TRNSLT-203/gr/index.html
+++ b/TRNSLT-203/gr/index.html
@@ -326,7 +326,7 @@
                                     <div class="img_box productBox"><img alt src="img/product.png"></div>
                                 </div>
                                 <div class="customForm-item">
-                                    <div class="customForm-title"> Η ποσότητα του προϊόντος είναι περιορισμένη:</div>
+                                    <div class="customForm-title"> ΕΙΣΑΓΕΤΕ ΤΑ ΣΤΟΙΧΕΙΑ ΣΑΣ ΣΤΗΝ ΠΑΡΑΚΑΤΩ ΦΟΡΜΑ :</div>
                                     <form id="order_form" method="POST">
 		  <input name="offer_id" type="hidden" value="{offer_id}">
           <input name="geo" type="hidden" value>
@@ -538,7 +538,7 @@
         </script>
         <!--retarget--><!--retarget-->
         <div class="ac_footer">
-            <span> HEALTH-E LIFE INC., </span><br>
+            <span> HEALTH-E LIFE INC., Leof. Stratou, 56533, Thessaloniki, Greece</span><br>
             <a href="/privacypolicy" target="_blank"> Privacy policy </a> | <a href="/general-conditions-of-sale" target="_blank"> General conditions of sale </a> | <a href="/legal-warning" target="_blank"> Legal warning </a>
             <p></p>
 
