--- a/TRNSLT-207/bg/index.html
+++ b/TRNSLT-207/bg/index.html
@@ -204,7 +204,7 @@
                            <div class="pg">
                               <ul class="bullet">
                                  <li> появата на болка както при стрес, така и в състояние на покой;</li>
-                                 <li> болката се усеща зад гръдната кост и може да се премести към рамото (от лявата страна), лопатката, ръката. Освен това интензивността</li><li> на болката е пряко свързана с тежестта на пристъпа;</li>
+                                 <li> болката се усеща зад гръдната кост и може да се премести към рамото (от лявата страна), лопатката, ръката;</li><li> интензивността на болката е пряко свързана с тежестта на пристъпа;</li>
                                  <li> остра, смазваща болка;</li>
                                  <li> пристъпът може да бъде овладян чрез приемане на таблетка нитроглицерин;</li>
                                  <li> продължителността на атаката ще бъде намалена: не повече от 5 минути.</li>
