--- a/OFFERS-328/es-hair-extension/index.html
+++ b/OFFERS-328/es-hair-extension/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>Hair Extensions</title>
     <link rel="icon" type="image/png" href="favicon.png">
-  <meta property="og:title" content="Hair Extensions"/>
-  <meta property="og:description" content="¡Extensión natural del cabello en un segundo!"/>
-  <meta property="og:image" content="https://i.imgur.com/CY5u401.png"/>
-  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Hair Extensions">
+  <meta property="og:description" content="¡Extensión natural del cabello en un segundo!">
+  <meta property="og:image" content="https://i.imgur.com/CY5u401.png">
+  <meta property="og:type" content="website">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -203,7 +203,7 @@
             </div>
             <div class="recom-item paddL80 J-Product">
                 <div class="flipclock"></div>
-                <h3 class="title sl-main-title">[<b class="price_land_discount">50</b>% de descuento Último Día]<br> Hair Extensions</h3>
+                <h3 class="title sl-main-title">[<b class="price_land_discount"> 50</b> % de descuento Último Día]<br> Hair Extensions</h3>
                 <div class="star J-quickToReview">
                     <div class="score">
                         <span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span>
@@ -229,7 +229,7 @@
                         <li data-title="BLACK" data-title-code="QkxBQ0s" class="product-types-item J-ProductTypes
                       active                        sl-subhead-title"> Blonde</li>
                         <li data-title="GRAY" data-title-code="R1JBWQ" class="product-types-item J-ProductTypes
-                                              sl-subhead-title"> Dark brown</li>
+                                              sl-subhead-title"> Negro</li>
                        
                     </ul>
                 </div>
@@ -242,7 +242,7 @@
                         <li style="display: none;" data-title="S" data-title-code="Uw" class="product-types-item J-ProductTypes
                       active                        sl-subhead-title"> Blonde</li>
                         <li style="display: none;" data-title="M" data-title-code="TQ" class="product-types-item J-ProductTypes
-                                              sl-subhead-title"> Dark brown </li>
+                                              sl-subhead-title"> Negro</li>
                         <li style="display: none;" data-title="L" data-title-code="TA" class="product-types-item J-ProductTypes
                                               sl-subhead-title"></li>
                         <li style="display: none;" data-title="XL" data-title-code="WEw" class="product-types-item J-ProductTypes
@@ -276,8 +276,7 @@
                     <div class="product-details">
                         <div>
                             <p style="text-align: center;"> ¡Extensión natural del cabello en un segundo! Al precio más bajo, <br>
-                                <span style="color: #ff0000;"><strong><x-newprice> 49</x-newprice><x-currency> €</x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> 
-								¡¡¡Este precio es válido solo hoy!!!</span> <br> Hair Extension luego sólo se puede comprar al precio total de<span style="color: #ff0000;"><strong><x-oldprice> 98</x-oldprice><x-currency> €</x-currency></strong></span><br><strong><span style="color: #ffffff;">
+                                <span style="color: #ff0000;"><strong><x-newprice> 49</x-newprice><x-currency> €</x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> ¡¡¡Este precio es válido solo hoy!!!</span> <br> Hair Extension luego sólo se puede comprar al precio total de<span style="color: #ff0000;"><strong><x-oldprice> 98</x-oldprice><x-currency> €</x-currency></strong></span><br><strong><span style="color: #ffffff;">
 							<br>
                             </span></strong></p><strong>
                             <ul>
@@ -319,7 +318,7 @@
                                 <img src="images/ba242d7502922b4a28d38c5e943a8341.jpg" alt width="472" height="331" data-pagespeed-url-hash="2357796676" \>
                             </p>
                             <h3>
-                                <span class="notranslate"><strong> ¡Sin pegamento, sin abrazadera, sin daños!</strong></span><strong><br></strong>
+                                <span class="notranslate"><strong> ¡Sin pegamento, sin bandas de goma, sin daños!</strong></span><strong><br></strong>
                             </h3>
                             <p>
                                 <img src="images/8b5a44d47bcf0569d5064739b4d2ea32.jpg" alt width="470" height="463" data-pagespeed-url-hash="642015253" \>
@@ -339,7 +338,7 @@
                             </h3>
 
                             <p>
-                                <span class="notranslate"> Hair Extension se fija literalmente en un minuto, sin pegamento ni abrazaderas. Todas las chicas pueden instalarlos en cualquier momento y lugar.</span>
+                                <span class="notranslate"> Hair Extension se puede poner en solo un minuto, sin pegamento ni bandas elásticas. Todas las chicas pueden usarlos en cualquier momento y en cualquier lugar.</span>
                             </p>
                             <p>
                                 <img src="images/9d2440cc0c065ab1f0ef2cfcbcd5d6ce.jpg" alt width="462" height="441" data-pagespeed-url-hash="1925806014" \>
@@ -364,14 +363,14 @@
                             </h2>
                             <ul>
                                 <li>
-                                    <span class="notranslate"> Largo: 55cm</span>
+                                    <span class="notranslate"> Largo: 50cm</span>
                                 </li>
                                 <li>
-                                    <span class="notranslate"> Color: rubio, castaño<br>
+                                    <span class="notranslate"> Color: blonde, negro<br>
 									</span>
                                 </li>
                                 <li>
-                                    <span class="notranslate"> Tipo: Lacio</span>
+                                    <span class="notranslate"> Tipo: rizos naturales</span>
                                 </li>
                             </ul>
 							<br>
@@ -484,7 +483,7 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> Entrega rápida, color idéntico a mi color natural. Son muy suaves y de buena calidad. Gran producto y vendedor. 5 puntos.</p>
+                                    <p class="reviews-detail"> Entrega rápida, color idéntico a mi color natural. Son muy suaves y de buena calidad. Y también pedí un montón de horquillas diferentes en esta tienda, por solo unos euros, están hechas de madera ecológica. Gran producto y vendedor. 5 puntos.</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
@@ -513,14 +512,18 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> ¡¡¡Estoy absolutamente encantada!!! Buen cabello. Es imposible distinguirlos de los naturales, no se sienten en absoluto en la cabeza. Pero lo más importante es que se pueden rizar o alisar dependiendo de!!! Doy 5 puntos</p>
+                                    <p class="reviews-detail"> ¡¡¡Estoy absolutamente encantada!!! Buen cabello. Es indistinguible de los naturales, no se sienten en absoluto en la cabeza. Pero lo más importante es que se pueden rizar o alisar, según quieras!!! Además, ahora tienen una oferta y compré cabello teñido muy barato en forma de trenza. pero puedes desarmarla y hacer cualquier peinado. Doy 5 puntos</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="reviews-info">
-                                <div class="reviews-picture"></div>
+                                <div class="reviews-picture">
+                                    <div class="J-bigImg">
+                                        <img src="images/U3egcT1.jpg" data-pagespeed-url-hash="397048019" \>
+                                    </div>
+                                </div>
                                 <div class="reviews-avatar">
                                     <img src="images/40.jpg" data-pagespeed-url-hash="1842396258" \>
                                 </div>
@@ -538,14 +541,18 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> Todo está como está escrito. Muy buena calidad. Cuando te rizas, no se deterioran. El vendedor es profesional.</p>
+                                    <p class="reviews-detail"> Todo está como está escrito. Muy buena calidad. Cuando te rizas, no se deterioran. El vendedor es profesional. También compré amuletos ecológicos en esta tienda, estuve buscando durante mucho tiempo, pero aquí un paquete grande no es para nada caro.</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="reviews-info">
-                                <div class="reviews-picture"></div>
+                                <div class="reviews-picture">
+                                    <div class="J-bigImg">
+                                        <img src="images/U3egcT3.jpg" data-pagespeed-url-hash="397048019" \>
+                                    </div>
+                                </div>
                                 <div class="reviews-avatar">
                                     <img src="images/40.jpg" data-pagespeed-url-hash="1842396258" \>
                                 </div>
@@ -563,14 +570,18 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> ¡Parece fenomenal! Largas, exuberantes e importantes que son completamente invisibles a las miradas indiscretas. ¡Lo recomiendo altamente!</p>
+                                    <p class="reviews-detail"> ¡Parece fenomenal! Largas, exuberantes e importantes que son completamente invisibles a las miradas indiscretas. También compré horquillas baratas.¡Lo recomiendo altamente!</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="reviews-info">
-                                <div class="reviews-picture"></div>
+                                <div class="reviews-picture">
+                                    <div class="J-bigImg">
+                                        <img src="images/U3egcT2.jpg" data-pagespeed-url-hash="397048019" \>
+                                    </div>
+                                </div>
                                 <div class="reviews-avatar">
                                     <img src="images/19.jpg" data-pagespeed-url-hash="1842396258" \>
                                 </div>
@@ -588,7 +599,7 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> En esta tienda encontré lo que necesitaba. Tengo mi propio cabello largo pero muy fino. Probé muchas confecciones diferentes, incluso profesionales, pero comenzaron a caerse de él. Hair Extension me queda perfecto. ¡Muchas gracias!</p>
+                                    <p class="reviews-detail"> En esta tienda encontré todo lo que necesitaba. Tengo mi propio cabello largo pero muy fino. Probé muchas construcciones diferentes, incluso profesionales, pero comenzaron a caerse de él. Hair Extension me queda perfecto. También dijes de diferentes colores con descuento. ¡Muchas gracias!</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
@@ -674,7 +685,7 @@
                         </div>
                        <button class="mk-button" value="ПОРЪЧАЙТЕ" type="submit"> SOLICITAR</button>
 		  <input name="offer_id" type="hidden" value="{offer_id}">
-          <input name="geo" type="hidden" value="">
+          <input name="geo" type="hidden" value>
           <input name="web_id" type="hidden" value="{web_id}">
           <input name="click_id" type="hidden" value="{click_id}">
           <input name="time_zone" type="hidden" value="+3">
