--- a/OFFERS-328/es-hair-extension/index.html
+++ b/OFFERS-328/es-hair-extension/index.html
@@ -347,7 +347,7 @@
                                 <span class="notranslate"><strong> Peinados de diferentes estilos</strong></span>
                             </h2>
                         
-                                <p> Hair Extension está hecho de fibra sintética resistente al calor de alta calidad, sedoso y suave al tacto, como el cabello real. Se pueden enderezar y rizar.</p>
+                                <p> Hair Extension está hecho de fibra sintética resistente al calor de alta calidad, sedoso y suave al tacto, como el cabello real. Se pueden alisar y rizar suavemente, e incluso teñir de cualquier color en la peluquería.</p>
                             
                             <p>
                                 <img src="images/99a01ed5fa8352242e466fcdbd5fd8d3.jpg" alt width="480" height="307" data-pagespeed-url-hash="1194029803" \>
