--- a/OFFERS-328/pt/index.html
+++ b/OFFERS-328/pt/index.html
@@ -276,7 +276,7 @@
                     <div class="product-details">
                         <div>
                             <p style="text-align: center;"> Extensão natural do cabelo num segundo! Com o preço mais baixo<br>
-                                <span style="color: #ff0000;"><strong><x-newprice> 49 €</x-newprice><x-currency> €</x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Este preço só é válido hoje!!!!</span> <br> Após disso Hair Extensions estará disponível ao preço total<span style="color: #ff0000;"><strong><x-oldprice> 98 €</x-oldprice><x-currency> €</x-currency></strong></span><br><strong><span style="color: #ffffff;">
+                                <span style="color: #ff0000;"><strong><x-newprice> 49 €</x-newprice><x-currency> </x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Este preço só é válido hoje!!!!</span> <br> Após disso Hair Extensions estará disponível ao preço total<span style="color: #ff0000;"><strong><x-oldprice> 98 €</x-oldprice><x-currency> </x-currency></strong></span><br><strong><span style="color: #ffffff;">
 							<br>
                             </span></strong></p><strong>
                             <ul>
