--- a/OFFERS-328/gr/index.html
+++ b/OFFERS-328/gr/index.html
@@ -519,7 +519,11 @@
                         </li>
                         <li>
                             <div class="reviews-info">
-                                <div class="reviews-picture"></div>
+                                <div class="reviews-picture">
+                                    <div class="J-bigImg">
+                                        <img src="images/U3egcT1.jpg" data-pagespeed-url-hash="397048019" \>
+                                    </div>
+                                </div>
                                 <div class="reviews-avatar">
                                     <img src="images/40.jpg" data-pagespeed-url-hash="1842396258" \>
                                 </div>
@@ -544,7 +548,11 @@
                         </li>
                         <li>
                             <div class="reviews-info">
-                                <div class="reviews-picture"></div>
+                                <div class="reviews-picture">
+                                    <div class="J-bigImg">
+                                        <img src="images/U3egcT3.jpg" data-pagespeed-url-hash="397048019" \>
+                                    </div>
+                                </div>
                                 <div class="reviews-avatar">
                                     <img src="images/40.jpg" data-pagespeed-url-hash="1842396258" \>
                                 </div>
@@ -569,7 +577,11 @@
                         </li>
                         <li>
                             <div class="reviews-info">
-                                <div class="reviews-picture"></div>
+                                <div class="reviews-picture">
+                                    <div class="J-bigImg">
+                                        <img src="images/U3egcT2.jpg" data-pagespeed-url-hash="397048019" \>
+                                    </div>
+                                </div>
                                 <div class="reviews-avatar">
                                     <img src="images/19.jpg" data-pagespeed-url-hash="1842396258" \>
                                 </div>
