--- a/OFFERS-327/cz/index.html
+++ b/OFFERS-327/cz/index.html
@@ -148,7 +148,7 @@
             </div>
             <div class="item">
               <div class="comm">
-                <p> Vyzkoušela jsem mnoho různých léků na artrózu. Upřímně, to, co lékaři radili, moc nepomohlo.<br> <br> Moje dcera koupila Fortuflex online. Prostě mě zachránil: bolesti zmizely, mobilita se začala vracet. Chtěla bych také poznamenat, že složení je přirozené a nemají žádné vedlejší účinky.</p>
+                <p> Vyzkoušel- jsem mnoho různých léků na artrózu. Upřímně, to, co lékaři radili, moc nepomohlo.<br> <br> Moje dcera koupila Fortuflex online. Prostě mě zachránil: bolesti zmizely, mobilita se začala vracet. Chtěl- bych také poznamenat, že složení je přirozené a nemají žádné vedlejší účinky.</p>
               </div>
               <div class="uzer">
                 <img src="img/ava_2.png" alt class="ava">
@@ -157,7 +157,7 @@
             </div>
             <div class="item">
               <div class="comm">
-                <p> Zranil jsem loket, lékaři řekli, že léčba bude velmi dlouhá a nebudu moci pracovat. Ale rozhodl jsem se vyzkoušet krém Fortuflex a do týdne se loket vzpamatoval, bolest zmizela, otok ustoupil. O dva týdny později jsem začal pracovat.<br> <br> Poté jsem poradil krém svým rodičům, kteří mají osteochondrózu</p>
+                <p> Zranila jsem loket, lékaři řekli, že léčba bude velmi dlouhá a nebudu moci pracovat. Ale rozhodla jsem se vyzkoušet krém Fortuflex a do týdne se loket vzpamatoval, bolest zmizela, otok ustoupil. O dva týdny později jsem začala pracovat.<br> <br> Poté jsem poradila krém svým rodičům, kteří mají osteochondrózu</p>
               </div>
               <div class="uzer">
                 <img src="img/ava_3.png" alt class="ava">
