--- a/OFFERS-327/bg/index.html
+++ b/OFFERS-327/bg/index.html
@@ -116,7 +116,7 @@
             </div>
             <div class="sect3__item">
               <img src="img/sect3_item3.png" alt><b> САМО ЕСТЕСТВЕНИ СЪСТАВКИ</b>
-              <p> 100% натуралните съставки действат синергично, като взаимно се допълват и усилват въздействието </p>
+              <p> 100% натуралните съставки действат синергично, като взаимно се допълват и усилват въздействието.</p>
             </div>
             <div class="sect3__item">
               <img src="img/sect3_item4.png" alt><b> ЕФЕКТИВНОСТ</b>
@@ -135,7 +135,7 @@
     <div class="sect4">
       <div class="container">
         <div class="sect4__main">
-          <h2 class="sect4__title"> Отзиви на хора, купили продукта</h2>
+          <h2 class="sect4__title"> Отзиви на хора, използвали продукта</h2>
           <div class="reviews2 owl-carousel">
             <div class="item">
               <div class="comm">
@@ -157,7 +157,7 @@
             </div>
             <div class="item">
               <div class="comm">
-                <p> Имах контузия на лакътя и лекарите казаха, че лечението ще отнеме много време и няма да мога да работя. Но реших да изпробвам крема Fortuflex и в рамките на една седмица лакътят ми се възстанови, болката и отокът изчезнаха. След седмици започнах отново да работя.<br> <br> След това препоръчах крема на родителите ми, те имат остеохондроза. </p>
+                <p> Имах контузия на лакътя и лекарите казаха, че лечението ще отнеме много време и няма да мога да работя. Но реших да изпробвам крема Fortuflex и в рамките на една седмица лакътят ми се възстанови, болката и отокът изчезнаха. След седмица започнах отново да работя.<br> <br> Препоръчах крема на родителите ми, те имат остеохондроза. </p>
               </div>
               <div class="uzer">
                 <img src="img/ava_3.png" alt class="ava">
@@ -200,7 +200,7 @@
             </div>
             <div class="sect6__item">
               <img src="img/sect6__item3.png" alt>
-              <p> Да не се мокри мястото <b> на нанасяне в течение на 1 час.</b></p>
+              <p> Обработеният участък<b> да не се мокри в рамките на 1 час.</b></p>
             </div>
           </div>
         </div>
@@ -219,7 +219,7 @@
             <div class="sect7__item">
               <img src="img/sect7__item2.svg" alt>
               <b> Как да поръчате?</b>
-              <p> Оставете заявка в сайта. Наш мениджър ще ви се обади за уточняване на подробностите</p>
+              <p> Оставете заявка на сайта. Наш мениджър ще ви се обади за уточняване на подробностите</p>
             </div>
             <div class="sect7__item">
               <img src="img/sect7__item3.svg" alt>
