--- a/OFFERS-327/gr/index.html
+++ b/OFFERS-327/gr/index.html
@@ -6,8 +6,8 @@
 <meta property="og:description" content="Средство №1 против радикулита, остеохондроза и травм!">
 <meta property="og:image" content="https://i.imgur.com/qQm7Sy3.png">
 <meta property="og:type" content="website">
-	<link rel="shortcut icon" href="favicon.ico" type="image/png">
-	
+        <link rel="shortcut icon" href="favicon.ico" type="image/png">
+        
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700;800;900&display=swap" rel="stylesheet">
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="intro__main intro__main--top">
           <div class="intro__title">
-            <div class="top"> Πονάνε <b>οι αρθρώσεις</b> ή <b>η πλάτη</b>
+            <div class="top"> Πονάνε <b> οι αρθρώσεις </b> ή<b> η πλάτη;</b>
             </div>
-            <p> Fortuflex προϊόν №1</p>
+            <p> Fortuflex ΠΡΟ'Ι'ΟΝ №1</p>
             <div class="bottom"> κατά της ισχιαλγίας, της οστεοχόνδρωσης και των τραυματισμών!</div>
           </div>
           <div class="intro__builets">
@@ -66,7 +66,7 @@
               <b> 34.99 €</b>
             </div>
             <div class="timer">
-              <div class="timer__title"> Μέχρι το τέλος της προσφοράς έμεινε </div>
+              <div class="timer__title"> ΜΕΧΡΙ ΤΟ ΤΕΛΟΣ ΤΗΣ ΠΡΟΣΦΟΡΑΣ ΕΜΕΙΝΕ </div>
               <div class="timer__wrapper">
                 <div class="t-hour"></div>: <div class="t-min"></div>: <div class="t-sec"></div>
               </div>
@@ -103,7 +103,7 @@
     <div class="sect3">
       <div class="container">
         <div class="sect3__main">
-          <h2 class="sect3__title"> Τα οφέλη της κρέμας<b> Fortuflex</b>
+          <h2 class="sect3__title"> ΤΑ ΟΦΕΛΗ ΤΗΣ ΚΡΕΜΑΣ<b> Fortuflex</b>
           </h2>
           <div class="sect3__grid">
             <div class="sect3__item">
@@ -135,7 +135,7 @@
     <div class="sect4">
       <div class="container">
         <div class="sect4__main">
-          <h2 class="sect4__title"> Κριτικές πελατών</h2>
+          <h2 class="sect4__title"> ΚΡΙΤΙΚΕΣ ΠΕΛΑΤΩΝ</h2>
           <div class="reviews2 owl-carousel">
             <div class="item">
               <div class="comm">
@@ -173,7 +173,7 @@
         <div class="sect5__main">
           <p class="sect5__subtitle"> * Τα αποτελέσματα μπορεί να διαφέρουν ανάλογα με τα μεμονωμένα χαρακτηριστικά του οργανισμού.</p>
           <h2 class="sect5__title">
-            <b> Κρέμα Fortuflex</b> συνιστάται από κορυφαίους ειδικούς</h2>
+            <b> ΚΡΕΜΑ Fortuflex</b> ΣΥΝΙΣΤΑΤΑΙ ΑΠΟ ΚΟΡΥΦΑΙΟΥΣ ΕΙΔΙΚΟΥΣ</h2>
           <div class="sect5__doc">
             <img src="img/doc.png" alt>
             <div class="comment">
@@ -188,7 +188,7 @@
     <div class="sect6">
       <div class="container">
         <div class="sect6__main">
-          <h2 class="sect6__title"> Πώς να χρησιμοποιήσετε το Fortuflex</h2>
+          <h2 class="sect6__title"> ΠΩΣ ΝΑ ΧΡΗΣΙΜΟΠΟΙΗΣΕΤΕ ΤΟ Fortuflex</h2>
           <div class="sect6__grid">
             <div class="sect6__item">
               <img src="img/sect6__item1.png" alt>
@@ -209,7 +209,7 @@
     <div class="sect7">
       <div class="container">
         <div class="sect7__main">
-          <h2 class="sect7__title"> Πώς να κάνετε την παραγγελία;</h2>
+          <h2 class="sect7__title"> ΠΩΣ ΝΑ ΚΑΝΕΤΕ ΤΗΝ ΠΑΡΑΓΓΕΛΙΑ:</h2>
           <div class="sect7__grid">
             <div class="sect7__item">
               <img src="img/sect7__item1.svg" alt>
@@ -236,7 +236,7 @@
           <div class="intro__title">
             <div class="top"> Πονάνε <b> οι αρθρώσεις </b> ή<b> η πλάτη;</b>
             </div>
-            <p> Fortuflex προϊόν №1</p>
+            <p> Fortuflex ΠΡΟ'Ι'ΟΝ №1</p>
             <div class="bottom"> κατά της ισχιαλγίας, της οστεοχόνδρωσης και των τραυματισμών!</div>
           </div>
           <div class="intro__builets">
@@ -268,7 +268,7 @@
               <b> 34.99 €</b>
             </div>
             <div class="timer">
-              <div class="timer__title"> Μέχρι το τέλος της προσφοράς έμεινε </div>
+              <div class="timer__title"> ΜΕΧΡΙ ΤΟ ΤΕΛΟΣ ΤΗΣ ΠΡΟΣΦΟΡΑΣ ΕΜΕΙΝΕ </div>
               <div class="timer__wrapper">
                 <div class="t-hour"></div>: <div class="t-min"></div>: <div class="t-sec"></div>
               </div>
