--- a/OFFERS-333/mx/index.html
+++ b/OFFERS-333/mx/index.html
@@ -24,8 +24,8 @@
             var d = new Date();
             var day = d.getDate();
 
-            var mnt = new Array("Janvier", "Février", "Mars", "Avril", "Mai",
-                "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre");
+            var mnt = new Array("enero", "febrero", "marzo", "abril", "mayo",
+                "junio", "julio", "agosto", "septiembre", "octubre", "noviembre", "diciembre");
 
             if (day <= 9) day = "0" + day;
 
